--- a/wp-content/themes/flash/style.css
+++ b/wp-content/themes/flash/style.css
@@ -1305,9 +1305,15 @@ body.transparent.header-sticky #masthead-sticky-wrapper.is-sticky #masthead .hea
 #site-navigation ul li.current-flash-item a {
     color: #30AFB8;
 }
-
+/***MODIFICADO background: #fff;***/
 .header-bottom {
-    background: #fff;
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1e5799+0,2989d8+50,207cca+51,7db9e8+100;Blue+Gloss+Default */
+background: #1e5799; /* Old browsers */
+background: -moz-linear-gradient(top,  #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
+height: 81px;
 }
 
 .header-bottom .search-wrap {
@@ -1319,8 +1325,8 @@ body.transparent.header-sticky #masthead-sticky-wrapper.is-sticky #masthead .hea
 body.transparent.header-sticky #masthead-sticky-wrapper #masthead .header-bottom .search-wrap .search-icon:hover,
 body.transparent #masthead .header-bottom .search-wrap .search-icon:hover,
 .header-bottom .search-wrap .search-icon:hover {
-    border-color: #30afb8;
-    color: #30afb8;
+  border-color:#30afb8; 
+  color: #30afb8;
 }
 
 .header-bottom .search-wrap .search-icon {
@@ -1619,6 +1625,8 @@ body.header-sticky #masthead-sticky-wrapper.is-sticky #masthead .header-top {
     transition: all 0.5s ease;
 }
 
+/**MODIFICADO**/
+/*
 body.header-sticky #masthead-sticky-wrapper.is-sticky #masthead .header-bottom {
     background: #fff;
     border: none;
@@ -1626,6 +1634,15 @@ body.header-sticky #masthead-sticky-wrapper.is-sticky #masthead .header-bottom {
     -moz-transition: all 0.5s ease;
     transition: all 0.5s ease;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+*/
+body.header-sticky #masthead-sticky-wrapper.is-sticky #masthead .header-bottom {
+    background: #1e5799; /* Old browsers */
+    background: -moz-linear-gradient(top,  #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
+
 }
 
 body.transparent.header-sticky #masthead-sticky-wrapper {
@@ -1868,10 +1885,11 @@ Slider
     transform: translate(-50%, -50%);
 }
 
+/**Modificado font-weight: 800;**/
 .tg-slider-widget .swiper-wrapper .slider-content .caption-title {
     color: #313b48;
     font-size: 48px;
-    font-weight: 800;
+    font-weight: 400;
     line-height: 50px;
     text-transform: uppercase;
 }
